KiCad ChangeLog 2009
====================

Please add newer entries at the top, list the date and your name with
email address.

2009-Dec-20 UPDATE Dick Hollenbeck <dick@softplc.com>
================================================================================
++pcbnew
    Renamed dialog_layers_setup* files.
    Got rid of the header file since there was only one file including it.


2009-Dec-11 UPDATE Dick Hollenbeck <dick@softplc.com>
================================================================================
++pcbnew
    Finished the Layer Setup Dialog.  I assumed that the new layer order will
    be in place soon.  It works fine now, but the layer order is probably
    misleading, since it does not reflect the current stackup but rather the
    future stackup.  I dropped support for a single layer board. The minimum
    is two copper layers.  Avoid the side you don't want anything on.

    Within a month I should have the layer visibility and selection widget
    in place.


2009-Dec-10 UPDATE Dick Hollenbeck <dick@softplc.com>
================================================================================
++all
  * Factored out the DSNLEXER class so it can be re-used more generally.  The
    constructor takes a keyword table, so it can be used for arbitrary DSN
    syntax files of your own chosing.  Simply create an enum {} with all your
    unique tokens in it.  Then create a KEYWORD table.  See SPECCTRA_DB::keywords[].
    The reason you want an enum is to give the C++ debugger better type information
    so it can show symbolic integer symbols.
  * Factored out common richio.cpp and richio.h
    which is what DSNLEXER uses.
  * Fixed some minor issues with reading circuit descriptor from a *.dsn file.


2009-Dec-6 UPDATE Dick Hollenbeck <dick@softplc.com>
================================================================================
++pcbnew & gerbview
  * Moved ReturnLayerName() to static BOARD::GetDefaultLayerName() and migrated